# AbSolute

./: .#solver.ml  .configure.make  .gitignore  .merlin  .travis.yml  ADCP.ml  CHANGES.txt  CONTRIBUTING.md  META  Makefile  Makefile.config  README.md  absolute-analyzer.opam  absolute-bench.opam  absolute.opam  constant.ml  depend  dune-project  libabsolute.opam  main.ml  minimizer.ml  problems.ml  repo  solver.ml  trigonometrics.ml  urls.txt  utils.ml  variousDA.ml  vue.ml
absolute-solver/: absolute.ml  argext.ml  config.ml  dune  memabsolute.ml  out.ml  terminal.ml
bench-analyzer/: README.md
benchmark/: README.md
benchmark/src/: absolute_bench.ml  bench_desc.atd  dune  factory.ml  measurement.ml  minizinc.ml  system.ml
benchmark/src/rcpsp/: disjunctive.ml  dune  patterson.ml  pro_gen_max.ml  psplib.ml  rcpsp_data.ml  rcpsp_model.ml  sm_format.ml
docs/: index.html
examples/: collision.ml  convex.ml  dune  elliptic_curve.ml  equal.ml  filterdiff.ml  polygons.ml  polynomial.ml  sortedlist.ml  tree.ml
frontend/: lexer.ml  lexer.mll  parser.ml  parser.mly  syntax.ml
lib/: consistency.ml  constant.ml  dune  kleene.ml  libabsolute.ml  ml_float.c  tools.ml
problems/: 3d.abs  3d.txt  3d2.abs  3d3.abs  3d4.txt  3d_linear.abs  EJCP_apollonius.abs  a.abs  abs1.abs  abs1.txt  abs_trigo.txt  aljazzaf.abs  apollonius.abs  b.txt  b1.abs  bellido.txt  booth.abs  boxdifference.abs  bronstein.txt  brown5a.abs  brown5b.txt  brown5c.abs  brown5d.abs  cercle.abs  cercle2.abs  cercle3.abs  chance.abs  combustion.txt  convex.abs  cpr2_ani_10-10.abs  cpr2_ani_10-10.txt  dccircuit.txt  diabolo.abs  different_pruning.abs  dingdong.abs  diseq.abs  diseq2.abs  disjunction.txt  dispatch.abs  eclipse.txt  (+74 more)
src/: .ocamlformat  ADCP.ml  README.md  absolute.ml  check.ml  config.ml  constant.ml  dune  main.ml  minimizer.ml  objgen.ml  problems.ml  solver.ml  splitter.ml  utils.ml  variousDA.ml  vue.ml
src/absolute-solver/: absolute.ml  config.ml  dune  terminal.ml
src/bounds/: bound_float.ml  bound_int.ml  bound_mpqf.ml  bound_rat.ml  bound_rat.mli  bound_sig.ml
src/combinators/: brancher.ml  collect_solutions.ml  combinator.ml  dfs.ml  elimination.ml  node_status.ml  precision.ml  propagation.ml  solutions_collector.ml  state.ml  statistics.ml  strategy.ml
src/combinators/bounded/: max_solutions.ml  solutions.ml  time.ml
src/domains/: .#bound_sig.ml  ADCP.ml  abstract_box.ml  abstract_domain.ml  abstract_union_box.ml  adcp_sig.ml  apron_domain.ml  boolean.ml  bot.ml  bound_float.ml  bound_mpqf.ml  bound_sig.ml  box_float.ml  boxed_octagon.ml  domains.ml  gradient_descent.ml  internalize.ml  itv.ml  itv_sig.ml  mapext.ml  ml_float.c  pizza_splitter.ml  product.ml  signature.ml  unconstrainted.ml  union_itv.ml  union_itv_sig.ml  uniontree.ml  variousDA.ml  vpl_domain.ko.ml  vpl_domain.ml  vpl_domain.ok.ml
src/domains/boolean/: boolean.ml  uniontree.ml
src/domains/box/: box_dom.ml  box_dom.mli  box_reified.ml  box_reified.mli  box_split.ml  box_split.mli  hc4.ml  hc4.mli  var_store.ml  var_store.mli
src/domains/box_octagon/: box_octagon.ml  box_octagon.mli  box_octagon_disjoint.ml  box_octagon_disjoint.mli  interval_view_dbm.ml  interval_view_dbm.mli  octagonal_rewriting.ml  octagonal_rewriting.mli  octagonalisation.ml  octagonalisation.mli
src/domains/combinators/: product.ml
src/domains/numeric/: ADCP.ml  abstract_box.ml  apron_domain.ml  vpl_domain.ko.ml
src/domains/octagon/: boxed_octagon.ml  closure.ml  closure.mli  dbm.ml  dbm.mli  interval_view_dbm.ml  interval_view_dbm.mli  octagon.ml  octagon.mli  octagon_split.ml  octagon_split.mli  octagonal_rewriting.ml  octagonal_rewriting.mli
src/frontend/: csp.ml  dune  file_parser.ml  lexer.ml  lexer.mll  modCsp.ml  modLexer.mll  modParser.mly  parser.ml  parser.mli  parser.mly  preprocessing.ml  rewrite.ml  syntax.ml
src/intervals/: itv.ml  itv_int.ml  itv_mix.ml  itv_sig.ml  newitv.ml
src/language/: csp.ml  csp_helper.ml  csp_printer.ml
src/lib/: README.md  abstractext.ml  apron_utils.ml  argext.ml  array_maker.ml  bot.ml  bound_float.ml  bound_int.ml  bound_mpqf.ml  bound_sig.ml  consistency.ml  constant.ml  dune  generatorext.ml  itv.ml  itv_int.ml  itv_mix.ml  itv_sig.ml  kleene.ml  libabsolute.ml  linconsext.ml  newitv.ml  parray.ml  parray.mli  polynom.ml  tconsext.ml  tools.ml  trigo.ml  vectorMap.ml
src/lib/arith/: f.ml  i.ml  polynom.ml  q.ml  ring.ml
src/lib/domains/: .#domains.ml  domains.ml  domains.mli  signature.ml
src/lib/domains/boolean/: boolean.ml
src/lib/domains/combinators/: product.ml
src/lib/domains/numeric/: apron_domain.ml  cartesian.ml  relational.ml  vpl_domain.ok.ml
src/lib/intervals/: bound_float.ml  bound_mpqf.ml  filter.ml  itv.ml  itv_int.ml  itv_mix.ml  itv_sig.ml  newitv.ml  trigo.ml
src/lib/lang/: csp.ml  csp_helper.ml
src/lib/parser/: README.md  dune  file_parser.ml  modCsp.ml  parser.mly  preprocessing.ml  rewrite.ml
src/lib/print/: out.ml  terminal.ml
src/lib/solver/: iterator.ml  minimizer.ml  result.ml  solver.ml  step_by_step.ml
src/misc/: README.md  argext.ml  dune  tools.ml
src/parser/: dune  file_parser.ml  lexer.mll  modCsp.ml  modLexer.mll  modParser.mly  parser.mly  preprocessing.ml  rewrite.ml
src/print/: apron_drawer.ml  box_drawer.ml  boxed_octagon_drawer.ml  drawer_sig.ml  latex.ml  objgen.ml  out.ml  product_drawer.ml  realbox_drawer.ml  terminal.ml  variousDA_drawer.ml  view.ml  vpl_drawer.ko.ml  vpl_drawer.ml  vpl_drawer.ok.ml  vue.ml
src/solver/: README.md  checker.ml  gradient_descent.ml  iterator.ml  minimizer.ml  result.ml  solver.ml  splitter.ml  step_by_step.ml  strategies.ml
test/: bound_tester.ml  dune  printer.ml  run_tests.ml  test_box.ml  test_boxed_octagon.ml  test_octagon.ml  test_octagon_utilities.ml  test_rewriter.ml  test_rewritter.ml  test_split_strategies.ml
tests/: dune  int00.abs  polynom.abs  simple02.abs  simple03.abs  simple05.abs  simple06.abs  testMixte.abs  testgraph.ml  testparsers.ml  unit_add.abs  unit_div.abs  unit_exp.abs  unit_infeasible.abs  unit_infeasible2.abs  unit_min.abs  unit_mul.abs  unit_mul2.abs  (+2 more)
(+1046 files in other folders)
