url {
  src: "https://github.com/mpelleau/AbSolute/archive/v0.0.1.tar.gz"
}
opam-version: "2.0"
maintainer: "Pierre Talbot <pierre.talbot@univ-nantes.fr>"
authors: [
  "Pierre Talbot <pierre.talbot@univ-nantes.fr>"
]
homepage: "https://github.com/mpelleau/AbSolute"
bug-reports: "https://github.com/mpelleau/AbSolute/issues"
dev-repo: "git+https://github.com/mpelleau/AbSolute"
license: "LGPL"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" {build}
  "ocaml" {>= "4.07.1"}
  "atdgen" {build}
  "atd"
  "extlib"
  "mtime"
  "mtime.clock.os"
  "libabsolute"
  "alcotest" {test}
]

synopsis: "Benchmarking tool for the AbSolute solver"
description: "AbSolute-bench is a tool to benchmark the constraint solver AbSolute. You can also use it to compare how different abstract domains compare on your problem."
