opam-version: "2.0"
version:"0.2"
maintainer: "Marie Pelleau <marie.pelleau@i3s.unice.fr>"
authors: [
  "Marie Pelleau <marie.pelleau@i3s.unice.fr>"
  "Ghiles Ziat <ghiles.ziat@lip6.fr>"
]
homepage: "https://github.com/mpelleau/AbSolute"
bug-reports: "https://github.com/mpelleau/AbSolute/issues"
dev-repo: "git+https://github.com/mpelleau/AbSolute"
license: "LGPL"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {>= "1.1"}
  "ocaml" {>= "4.08"}
  "apron"
  "apronext" {>= "1.0.2"}
  "picasso" {>= "0.3.0"}
  "menhir"
  "libabsolute"
  "odoc"
]
synopsis: "AbSolute solver"
description: "AbSolute is a constraint solver based on abstract domains from the theory of abstract interpretation."
