opam-version: "2.0"
version:"0.1"
maintainer: "Marie Pelleau <marie.pelleau@i3s.unice.fr>"
authors: [
  "Marie Pelleau <marie.pelleau@i3s.unice.fr>"
  "Ghiles Ziat <ghiles.ziat@lip6.fr>"
]
homepage: "https://github.com/mpelleau/AbSolute"
bug-reports: "https://github.com/mpelleau/AbSolute/issues"
dev-repo: "git+https://github.com/mpelleau/AbSolute"
license: "LGPL-3.0-or-later"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {>= "2.0"}
  "ocaml" {>= "4.11"}
  "apron"
  "apronext" {>= "1.0.2"}
  "picasso"{>= "0.3.0"}
  "menhir" {>= "2.0"}
]
synopsis: "Libabsolute"
description: "Libabsolute is a constraint programming library based on abstract domains from the theory of abstract interpretation. It is used and distributed with the AbSolute constraint solver."
