(library
  (wrapped false)
  (name libsolver)
  (modules argext terminal out config)
  (libraries libabsolute)
 )

(executable
 (package absolute)
 (name absolute)
 (modules absolute)
 (public_name absolute)
 (libraries libabsolute libsolver))

(executable
 (name memabsolute)
 (modules memabsolute)
 (libraries libabsolute libsolver memtrace landmarks)
 (preprocess (pps landmarks.ppx --auto)))
