(include_subdirs unqualified)

(library
  (name libabsolute)
  (wrapped false)
  (libraries bigarray gmp apron apron.polkaMPQ apron.octD apron.boxMPQ apronext picasso
    (select vpl_domain.ml from
      (vpl zarith -> domains/vpl_domain.ok.ml)
      (!vpl       -> domains/vpl_domain.ko.ml)))
  (flags (:standard -w "+a-4-32-27-42" -warn-error "+a-4-32-27-42"))
  (c_names ml_float)
  (modules (:standard \ absolute check)))

(executable
 (name absolute)
 (public_name absolute)
 (modules absolute)
 (libraries libabsolute))

(test
  (name check)
  (modules check)
  (libraries libabsolute))
