(executable
 (name absolute_bench)
 (public_name absolute-bench)
 (package absolute-bench)
 (modules :standard)
 (ocamlopt_flags (:standard -O3))
 (libraries rcpsp libabsolute atdgen extlib mtime mtime.clock.os)
)

(rule
 (targets bench_desc_j.ml bench_desc_j.mli)
 (deps    bench_desc.atd)
 (action  (run atdgen -j -j-std -j-strict-fields %{deps})))

(rule
 (targets bench_desc_t.ml bench_desc_t.mli)
 (deps    bench_desc.atd)
 (action  (run atdgen -t %{deps})))
